Fix z-index

--- a/static/common.css
+++ b/static/common.css
@@ -680,6 +680,7 @@ nav .dropdown-menu li a {
     border-radius: 50px;
     background-color: #052464;
     opacity: 0.5;
+    z-index: 9999;
 }
 
 #scrollToTopButton:hover {
