--- a/static/units.css
+++ b/static/units.css
@@ -340,4 +340,5 @@
     top: 10px;
     left: 15px;
     padding: 0 15px;
+    z-index: 9999;
 }
